feat: controladores con requestDto y responseDto
